--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-178.6KB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇦🇺 澳大利亚-2.15MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.71MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.35MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-751.1KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.81MB/s(Youtube:不良林), server: 167.88.61.2, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-3.38MB/s(Youtube:不良林), server: 167.88.61.2, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-2.05MB/s(Youtube:不良林), server: 167.88.61.2, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-2.36MB/s(Youtube:不良林), server: 167.88.61.2, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-472.6KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-2.61MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-3.38MB/s(Youtube:不良林), server: 167.88.61.2, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-2.72MB/s(Youtube:不良林), server: 167.88.61.2, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-2.05MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-1.30MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-448.9KB/s(Youtube:不良林), server: 116.129.254.177, port: 26011, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.38MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-178.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇬🇧 英国-751.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
+      - 🇫🇷 法国-472.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-448.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.38MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-178.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇬🇧 英国-751.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
+      - 🇫🇷 法国-472.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-448.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.38MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-178.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇬🇧 英国-751.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
+      - 🇫🇷 法国-472.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-448.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.38MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-178.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇬🇧 英国-751.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
+      - 🇫🇷 法国-472.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-448.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.38MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-178.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇬🇧 英国-751.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
+      - 🇫🇷 法国-472.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-448.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.38MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-178.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇬🇧 英国-751.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
+      - 🇫🇷 法国-472.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-448.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.38MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-178.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇬🇧 英国-751.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
+      - 🇫🇷 法国-472.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-448.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.38MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
